Tune workspace toast messaging

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <title>JobSprint — Find your next job with structure and confidence</title>
   <meta name="description" content="JobSprint helps you stay consistent, focused, and ready — turning your job hunt into a clear 90-day journey with visible progress." />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/theme.css">
   <style>
     :root{--ink:#0b1a33;--muted:#475569;--line:#e6edf5;--bg:#fff;--card:#f5f8fc;--brand:#0a66c2;--brand2:#1da1f2}
     *{box-sizing:border-box} html,body{margin:0}
-    body{font-family:Inter,system-ui,Segoe UI,Roboto,Arial;color:var(--ink);background:var(--bg)}
+    body{font-family:Inter,system-ui,Segoe UI,Roboto,Arial;color:var(--ink)}
     .wrap{max-width:1120px;margin:0 auto;padding:20px}
 
     /* NAV */
