--- a/signup.html
+++ b/signup.html
@@ -11,46 +11,78 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/theme.css">
 
   <style>
-    :root{--ink:#0f172a; --muted:#5b6477; --line:#e6eaf2; --brand:#0b6cff; --card:#fff;}
-    *{box-sizing:border-box} html,body{height:100%}
-    body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--ink);background:#fff}
-    .shell{display:grid;grid-template-columns:1.25fr 1fr;min-height:100vh}
-    .hero{position:relative;overflow:hidden;background:url('https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=1600&auto=format&fit=crop') center/cover no-repeat}
-    .hero::after{content:"";position:absolute;inset:0;background:linear-gradient(90deg, rgba(0,0,0,.35), rgba(0,0,0,.15))}
-    .auth{display:flex;align-items:center;justify-content:center;background:#fff}
-    .card{width:min(440px,92%);background:var(--card);border:1px solid var(--line);border-radius:16px;padding:28px 24px;box-shadow:0 10px 30px rgba(16,24,40,.04)}
-    .logo{display:flex;align-items:center;gap:10px;margin-bottom:8px}
-    .logo-badge{width:36px;height:36px;display:grid;place-items:center;border-radius:10px;background:#eef4ff;color:#1c4ed8;font-weight:700;font-size:18px}
-    h1{font-size:20px;margin:8px 0 4px}
-    .sub{color:var(--muted);font-size:14px;margin:0 0 18px}
-    .g-btn-wrap{display:grid;place-items:center}
-    .error-banner{display:none;margin-bottom:16px;padding:12px;border-radius:10px;background:#fee2e2;color:#b91c1c;font-size:14px;line-height:1.45}
-    .error-banner.show{display:block}
-    .cta-button{width:100%;margin-top:18px;padding:12px 18px;border-radius:10px;border:none;background:var(--brand);color:#fff;font-weight:600;font-size:15px;cursor:pointer;transition:background .2s ease}
-    .cta-button:disabled{opacity:.65;cursor:not-allowed;background:#93b1ff}
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{margin:0;color:var(--ink);background:transparent}
+    .auth-shell{display:grid;grid-template-columns:minmax(0,1.15fr) minmax(320px,1fr);min-height:100vh}
+    .promo{position:relative;overflow:hidden;padding:64px 56px;color:#fff;background:linear-gradient(140deg,rgba(10,102,194,.92),rgba(29,161,242,.85));display:flex;flex-direction:column;gap:48px;justify-content:space-between}
+    .promo::before,.promo::after{content:"";position:absolute;border-radius:50%;filter:blur(0px);opacity:.45;pointer-events:none}
+    .promo::before{width:360px;height:360px;background:radial-gradient(circle at center,rgba(255,255,255,.45),rgba(255,255,255,0));top:-120px;right:-100px;animation:promoFloat 18s ease-in-out infinite}
+    .promo::after{width:260px;height:260px;background:radial-gradient(circle at center,rgba(255,255,255,.35),rgba(255,255,255,0));bottom:-80px;left:-60px;animation:promoFloat 16s ease-in-out infinite reverse}
+    .promo-head{display:flex;align-items:center;gap:12px;font-weight:700;font-size:18px;letter-spacing:.4px;text-transform:uppercase}
+    .promo-head img{height:52px;width:auto}
+    .promo h1{margin:18px 0 12px;font-size:34px;line-height:1.2}
+    .promo p{margin:0;color:rgba(255,255,255,.82);font-size:16px;max-width:420px;line-height:1.6}
+    .promo-points{margin:32px 0 0;padding:0;list-style:none;display:flex;flex-direction:column;gap:14px;color:rgba(255,255,255,.9);font-size:15px}
+    .promo-points li{display:flex;align-items:center;gap:10px}
+    .promo-points span{display:inline-flex;align-items:center;justify-content:center;width:26px;height:26px;border-radius:50%;background:rgba(255,255,255,.18);font-size:13px;font-weight:700}
+    .promo-footer{font-size:13px;color:rgba(255,255,255,.75);max-width:360px;line-height:1.5}
+    .auth-panel{display:flex;align-items:center;justify-content:center;padding:40px 24px}
+    .auth-card{width:min(440px,92%);background:rgba(255,255,255,.94);border:1px solid rgba(10,102,194,.18);border-radius:26px;padding:32px 30px;box-shadow:var(--shadow-sm);backdrop-filter:blur(14px)}
+    .logo{display:flex;align-items:center;gap:12px;margin-bottom:12px}
+    .logo img{width:48px;height:48px}
+    .logo-title{font-weight:700;font-size:18px;color:var(--brand-strong)}
+    h1{font-size:24px;margin:12px 0 6px;line-height:1.3}
+    .sub{color:var(--muted);font-size:14px;margin:0 0 22px}
+    .g-btn-wrap{display:grid;place-items:center;margin-top:6px}
+    .cta-button{width:100%;margin-top:18px;padding:12px 18px;border-radius:12px;border:none;background:linear-gradient(135deg,var(--brand),var(--brand-accent));color:#fff;font-weight:600;font-size:15px;cursor:pointer;transition:transform .2s ease,box-shadow .2s ease}
+    .cta-button:hover:not(:disabled){transform:translateY(-1px);box-shadow:0 14px 28px rgba(10,102,194,.22)}
+    .cta-button:disabled{opacity:.65;cursor:not-allowed;box-shadow:none}
     .cta-button[hidden]{display:none}
-    .terms{color:var(--muted);font-size:12px;margin-top:12px}
-    @media (max-width: 900px){ .shell{grid-template-columns:1fr} .hero{display:none} }
+    .error-banner{display:none;margin-bottom:16px;padding:14px;border-radius:12px;background:rgba(220,38,38,.08);color:#b91c1c;border:1px solid rgba(220,38,38,.28);font-size:14px;line-height:1.45}
+    .error-banner.show{display:block}
+    .terms{color:var(--muted);font-size:12px;margin-top:16px;line-height:1.6}
+    .terms a{color:var(--brand);text-decoration:none;font-weight:600}
+    .terms a:hover{text-decoration:underline}
+    @keyframes promoFloat{0%,100%{transform:translate3d(0,0,0)}50%{transform:translate3d(12px,-18px,0)}}
+    @media(max-width:1024px){.auth-shell{grid-template-columns:1fr}.promo{padding:48px;min-height:420px}}
+    @media(max-width:900px){.promo{display:none}.auth-shell{grid-template-columns:1fr}.auth-panel{padding:36px 18px}}
   </style>
 </head>
 
 <body>
-  <div class="shell">
-    <div class="hero" aria-hidden="true"></div>
+  <div class="auth-shell">
+    <section class="promo">
+      <div>
+        <div class="promo-head">
+          <img src="logo.png" alt="JobSprint mark" loading="lazy">
+          <span>JobSprint</span>
+        </div>
+        <h1>Stay calm, land faster.</h1>
+        <p>Structure your 90-day job search with resume diagnostics, guided application workflows, and a workspace built for consistency.</p>
+        <ul class="promo-points">
+          <li><span>1</span><div>Upload your resume for instant ATS-fit feedback.</div></li>
+          <li><span>2</span><div>Track every opportunity in one calm, focused workspace.</div></li>
+          <li><span>3</span><div>Get nudges and insights that keep your sprint moving.</div></li>
+        </ul>
+      </div>
+      <p class="promo-footer">Sign in with Google to continue your sprint. We’ll save your progress and guide every next step.</p>
+    </section>
 
-    <div class="auth">
-      <div class="card">
+    <div class="auth-panel">
+      <div class="auth-card">
         <div class="logo">
-          <div class="logo-badge">J</div>
+          <img src="logo.png" alt="JobSprint logo" loading="lazy">
           <div>
-            <div style="font-weight:700">Welcome to JobSprint</div>
+            <div class="logo-title">Welcome to JobSprint</div>
             <div class="sub">Get started with your Google account</div>
           </div>
         </div>
 
-        <div id="error-banner" class="error-banner" role="alert" aria-live="polite"></div>
+        <div id="error-banner" class="error-banner" role="alert" aria-live="assertive"></div>
 
         <!-- Google sign-in -->
         <div id="g_id_onload"
@@ -83,6 +115,7 @@
       </div>
     </div>
   </div>
+  <script src="scripts/theme.js"></script>
   <script>
     const PRICING_REDIRECT_URL = '/index.html#pricing';
     const searchParams = new URLSearchParams(location.search);
@@ -94,6 +127,28 @@
       googlePayload: null,
       googleCredential: '',
       paymentId: '',
+    };
+
+    const notify = (message, options) => {
+      if (window.JobSprintUI && typeof window.JobSprintUI.showToast === 'function') {
+        return window.JobSprintUI.showToast(message, options || {});
+      }
+      return null;
+    };
+
+    const notifyLoading = (message, options) => {
+      if (window.JobSprintUI && typeof window.JobSprintUI.showLoadingToast === 'function') {
+        return window.JobSprintUI.showLoadingToast(message, options || {});
+      }
+      return null;
+    };
+
+    const redirectWithToast = (url, message) => {
+      const toast = notifyLoading(message || 'Redirecting…');
+      setTimeout(() => {
+        toast?.update?.('Almost there…');
+        window.location.href = url;
+      }, 180);
     };
 
     let razorpayLoaderPromise;
@@ -133,12 +188,15 @@
       if (banner) {
         banner.textContent = message;
         banner.classList.add('show');
-      } else {
-        alert(message);
       }
+      notify(message, { variant: 'danger' });
 
       if (redirectTo) {
-        setTimeout(() => { location.href = redirectTo; }, 2500);
+        const toast = notifyLoading('Redirecting you…');
+        setTimeout(() => {
+          toast?.update?.('Opening pricing…');
+          window.location.href = redirectTo;
+        }, 900);
       }
     }
 
@@ -154,27 +212,36 @@
         bodyPayload.coupon = SIGNUP_STATE.coupon;
       }
 
-      const orderRes = await fetch('/api/create-order', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(bodyPayload),
-      });
+      const loadingToast = notifyLoading('Preparing secure payment…');
+      try {
+        const orderRes = await fetch('/api/create-order', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(bodyPayload),
+        });
 
-      if (!orderRes.ok) {
-        const errText = await orderRes.text().catch(() => '');
-        throw new Error(errText || 'Unable to start payment.');
-      }
-
-      const orderData = await orderRes.json();
-      await ensureRazorpayLoaded();
-
-      return new Promise((resolve, reject) => {
-        if (typeof window.Razorpay !== 'function') {
-          reject(new Error('Payment gateway unavailable.'));
-          return;
+        if (!orderRes.ok) {
+          const errText = await orderRes.text().catch(() => '');
+          throw new Error(errText || 'Unable to start payment.');
         }
 
-        const rzp = new window.Razorpay({
+        const orderData = await orderRes.json();
+        loadingToast?.update?.('Launching secure payment…');
+        await ensureRazorpayLoaded();
+        loadingToast?.update?.('Waiting for confirmation…');
+
+        return await new Promise((resolve, reject) => {
+          const fail = (err) => {
+            loadingToast?.dismiss?.();
+            reject(err);
+          };
+
+          if (typeof window.Razorpay !== 'function') {
+            fail(new Error('Payment gateway unavailable.'));
+            return;
+          }
+
+          const rzp = new window.Razorpay({
           key: orderData.keyId,
           amount: orderData.amount,
           currency: orderData.currency,
@@ -187,24 +254,29 @@
           },
           handler: (response) => {
             if (response && response.razorpay_payment_id) {
+              loadingToast?.dismiss?.();
               resolve(response.razorpay_payment_id);
             } else {
-              reject(new Error('Payment did not complete.'));
+              fail(new Error('Payment did not complete.'));
             }
           },
           modal: {
             ondismiss: () => {
-              reject(new Error('Payment window closed before completion.'));
+              fail(new Error('Payment window closed before completion.'));
             },
           },
         });
 
-        try {
-          rzp.open();
-        } catch (err) {
-          reject(err);
-        }
-      });
+          try {
+            rzp.open();
+          } catch (err) {
+            fail(err);
+          }
+        });
+      } catch (err) {
+        loadingToast?.dismiss?.();
+        throw err;
+      }
     }
 
     function parseJwt (token) {
@@ -222,6 +294,7 @@
         continueButton.disabled = false;
         continueButton.textContent = 'Continue to payment';
         continueButton.hidden = false;
+        notify('Secure your JobSprint sprint with a quick payment.', { variant: 'info' });
       }
     }
 
@@ -232,6 +305,7 @@
     }
 
     window.handleGoogleCredential = async function (response) {
+      let lookupToast = null;
       try {
         const payload   = parseJwt(response.credential);
         const google_id = payload.sub;
@@ -244,6 +318,8 @@
         const mode       = SIGNUP_STATE.mode || 'signup';
         const payment_id = SIGNUP_STATE.paymentIdFromQuery;
 
+        lookupToast = notifyLoading('Checking your account status…');
+
         // 1) Check if user exists
         let found = false, token = '', profile_complete = false;
         try {
@@ -254,16 +330,19 @@
           }
         } catch (e) { console.warn('get-user failed', e); }
 
+        lookupToast?.dismiss?.();
+        lookupToast = null;
+
         // 2) Found user
         if (found) {
           hideContinueButton();
           if (profile_complete) {
-            location.href = '/workspace.html?u=' + encodeURIComponent(token);
+            redirectWithToast('/workspace.html?u=' + encodeURIComponent(token), 'Taking you to your workspace…');
           } else {
             // send back to onboarding to finish
             const qs = new URLSearchParams({ google_id, name, email, payment_id });
             if (SIGNUP_STATE.plan) { qs.set('plan', SIGNUP_STATE.plan); }
-            location.href = '/onboarding.html?' + qs.toString();
+            redirectWithToast('/onboarding.html?' + qs.toString(), 'Let’s finish your onboarding…');
           }
           return;
         }
@@ -281,10 +360,12 @@
           try {
             const existingPayment = SIGNUP_STATE.paymentIdFromQuery;
             SIGNUP_STATE.paymentId = existingPayment;
+            notify('Verifying your payment…', { variant: 'info' });
             await completeSignup(existingPayment);
             return;
           } catch (err) {
             console.error('Existing payment verification failed', err);
+            notify('We could not verify the previous payment. Please try again.', { variant: 'warning' });
             SIGNUP_STATE.paymentIdFromQuery = '';
             SIGNUP_STATE.paymentId = '';
           }
@@ -298,8 +379,12 @@
         showContinueButton();
 
       } catch (err) {
+        lookupToast?.dismiss?.();
+        lookupToast = null;
         console.error(err);
         showErrorBanner('Google sign-in failed. Please try again.');
+      } finally {
+        lookupToast?.dismiss?.();
       }
     };
 
@@ -310,6 +395,7 @@
 
       const { google_id, email, name } = SIGNUP_STATE.googlePayload;
 
+      const creationToast = notifyLoading('Creating your JobSprint workspace…');
       const createRes = await fetch('/api/create-user', {
         method: 'POST',
         headers: {'Content-Type':'application/json'},
@@ -332,6 +418,7 @@
       }
 
       if (!createRes.ok || !createData.success) {
+        creationToast?.dismiss?.();
         const errCode = createData && createData.error;
         const errMessage = createData && createData.message
           ? createData.message
@@ -351,6 +438,8 @@
         throw new Error(errMessage);
       }
 
+      creationToast?.dismiss?.();
+      notify('Workspace ready! Redirecting to onboarding…', { variant: 'success' });
       const qs = new URLSearchParams({
         google_id,
         name,
@@ -360,7 +449,7 @@
       if (SIGNUP_STATE.plan) {
         qs.set('plan', SIGNUP_STATE.plan);
       }
-      location.href = '/onboarding.html?' + qs.toString();
+      redirectWithToast('/onboarding.html?' + qs.toString(), 'Opening onboarding…');
     }
 
     if (continueButton) {
