--- a/sprint-readiness.html
+++ b/sprint-readiness.html
@@ -5,263 +5,51 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JobSprint • Sprint Readiness</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles/theme.css" />
   <style>
-    :root {
-      --bg1: #fff6ec;
-      --bg2: #ffe0c8;
-      --ink: #2c200f;
-      --muted: #6f5b45;
-      --brand: #ff9a4f;
-      --brand-dark: #ff7c1f;
-      --card: rgba(255, 255, 255, 0.92);
-      --card-border: rgba(255, 196, 146, 0.55);
-    }
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      font-family: "Poppins", system-ui, -apple-system, "Segoe UI", sans-serif;
-      background: linear-gradient(120deg, var(--bg1), var(--bg2));
-      color: var(--ink);
-      min-height: 100vh;
-    }
-    .page {
-      max-width: 760px;
-      margin: 0 auto;
-      padding: 48px 24px 120px;
-      position: relative;
-    }
-    .floating-blob {
-      position: fixed;
-      border-radius: 50%;
-      background: rgba(255, 255, 255, 0.28);
-      filter: blur(0.1px);
-      animation: float 14s ease-in-out infinite;
-      z-index: 0;
-      pointer-events: none;
-    }
-    .floating-blob:nth-child(1) { width: 160px; height: 160px; top: 12vh; left: 6vw; animation-delay: 0s; }
-    .floating-blob:nth-child(2) { width: 120px; height: 120px; bottom: 10vh; right: 8vw; animation-delay: 3s; }
-    .floating-blob:nth-child(3) { width: 90px; height: 90px; top: 48vh; right: 20vw; animation-delay: 6s; }
-    @keyframes float {
-      0%, 100% { transform: translateY(0) scale(1); }
-      50% { transform: translateY(-24px) scale(1.05); }
-    }
-    .story-shell {
-      position: relative;
-      z-index: 1;
-      background: rgba(255, 255, 255, 0.9);
-      border-radius: 28px;
-      padding: 40px;
-      border: 1px solid rgba(255, 190, 138, 0.45);
-      box-shadow: 0 18px 48px rgba(215, 125, 60, 0.18);
-      overflow: hidden;
-    }
-    @media (max-width: 680px) {
-      .story-shell { padding: 32px 22px 36px; border-radius: 24px; }
-    }
-    .loading {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 18px;
-      text-align: center;
-    }
-    .loading h1 {
-      margin: 0;
-      font-size: 26px;
-      font-weight: 600;
-    }
-    .loading p {
-      margin: 0;
-      color: var(--muted);
-      font-size: 15px;
-    }
-    .spinner {
-      width: 72px;
-      height: 72px;
-      border-radius: 50%;
-      border: 6px solid rgba(255, 255, 255, 0.7);
-      border-top-color: var(--brand);
-      animation: spin 1.2s linear infinite;
-    }
-    @keyframes spin {
-      from { transform: rotate(0deg); }
-      to { transform: rotate(360deg); }
-    }
-    .story {
-      display: none;
-      opacity: 0;
-      transition: opacity 0.6s ease;
-    }
-    .story.visible {
-      display: block;
-      opacity: 1;
-    }
-    h2.story-heading {
-      margin: 0;
-      font-size: 28px;
-      font-weight: 600;
-    }
-    p.story-paragraph {
-      margin: 16px 0 26px;
-      color: var(--muted);
-      font-size: 16px;
-      line-height: 1.6;
-    }
-    .ats-card {
-      background: var(--card);
-      border-radius: 22px;
-      padding: 28px;
-      border: 1px solid var(--card-border);
-      box-shadow: 0 12px 36px rgba(204, 114, 40, 0.16);
-      display: grid;
-      gap: 16px;
-    }
-    .ats-score {
-      display: flex;
-      align-items: baseline;
-      gap: 12px;
-    }
-    .ats-score strong {
-      font-size: 42px;
-      font-weight: 600;
-      color: var(--brand-dark);
-    }
-    .ats-score span {
-      font-size: 15px;
-      color: var(--muted);
-    }
-    .ats-note {
-      font-size: 16px;
-      font-weight: 500;
-      color: #8a5524;
-    }
-    ul.ats-fixes {
-      margin: 0;
-      padding: 0 0 0 20px;
-      color: #6d543f;
-      font-size: 14px;
-      line-height: 1.5;
-    }
-    .actions-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 14px;
-      align-items: center;
-    }
-    .btn-primary {
-      background: var(--brand);
-      color: #fff;
-      border: none;
-      border-radius: 12px;
-      padding: 12px 22px;
-      font-weight: 600;
-      font-size: 15px;
-      cursor: pointer;
-      transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
-      box-shadow: 0 10px 24px rgba(255, 140, 60, 0.32);
-    }
-    .btn-primary:hover {
-      background: var(--brand-dark);
-      transform: translateY(-1px);
-    }
-    .btn-text {
-      background: none;
-      border: none;
-      color: #8a5524;
-      font-weight: 600;
-      font-size: 15px;
-      cursor: pointer;
-      padding: 10px 12px 10px 4px;
-    }
-    .btn-text:hover {
-      text-decoration: underline;
-    }
-    .whisper {
-      margin-top: 6px;
-      font-size: 13px;
-      color: rgba(111, 91, 69, 0.9);
-    }
-    .visual-placeholder {
-      margin: 32px 0 18px;
-      background: linear-gradient(135deg, rgba(255, 229, 205, 0.9), rgba(255, 201, 161, 0.65));
-      border-radius: 20px;
-      padding: 26px;
-      border: 1px dashed rgba(255, 166, 105, 0.6);
-      color: #8c5424;
-      font-size: 15px;
-      line-height: 1.6;
-      box-shadow: inset 0 0 0 1px rgba(255, 200, 150, 0.35);
-    }
-    .soft-divider {
-      height: 60px;
-      display: grid;
-      place-items: center;
-    }
-    .soft-divider::before {
-      content: "";
-      width: 160px;
-      height: 1px;
-      background: linear-gradient(90deg, rgba(255, 221, 191, 0), rgba(255, 173, 110, 0.7), rgba(255, 221, 191, 0));
-      opacity: 0.8;
-    }
-    .salary-callout {
-      background: var(--card);
-      border-radius: 22px;
-      padding: 26px;
-      border: 1px solid var(--card-border);
-      box-shadow: 0 16px 40px rgba(206, 118, 45, 0.15);
-      display: grid;
-      gap: 14px;
-    }
-    .salary-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 18px;
-    }
-    .salary-item {
-      background: rgba(255, 238, 220, 0.6);
-      border-radius: 16px;
-      padding: 18px;
-      border: 1px solid rgba(255, 183, 120, 0.45);
-    }
-    .salary-item strong {
-      display: block;
-      font-size: 16px;
-      margin-bottom: 6px;
-    }
-    .closing-line {
-      margin: 32px 0 38px;
-      font-size: 18px;
-      font-weight: 500;
-      color: #7a4e23;
-    }
-    .final-cta {
-      display: flex;
-      justify-content: center;
-    }
-    .hidden-input {
-      position: absolute;
-      opacity: 0;
-      pointer-events: none;
-      width: 0;
-      height: 0;
-    }
-    @media (max-width: 520px) {
-      .actions-row {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      .btn-primary, .btn-text {
-        width: 100%;
-      }
-      .btn-text {
-        text-align: center;
-      }
-    }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:'Inter',system-ui,-apple-system,'Segoe UI',sans-serif;color:var(--ink);background:transparent;min-height:100vh}
+    .page{max-width:820px;margin:0 auto;padding:64px 24px 120px;position:relative}
+    .floating-blob{position:fixed;border-radius:50%;background:rgba(13,110,253,0.14);filter:blur(0);animation:float 16s ease-in-out infinite;z-index:0;pointer-events:none}
+    .floating-blob:nth-of-type(1){width:180px;height:180px;top:12vh;left:8vw;animation-delay:0s}
+    .floating-blob:nth-of-type(2){width:130px;height:130px;bottom:12vh;right:12vw;animation-delay:-5s}
+    .floating-blob:nth-of-type(3){width:100px;height:100px;top:52vh;right:24vw;animation-delay:-9s}
+    @keyframes float{0%,100%{transform:translate3d(0,0,0)}50%{transform:translate3d(16px,-18px,0)}}
+    .story-shell{position:relative;z-index:1;background:rgba(255,255,255,0.92);border-radius:28px;padding:44px;border:1px solid rgba(10,102,194,0.16);box-shadow:var(--shadow-sm);backdrop-filter:blur(12px)}
+    @media(max-width:680px){.story-shell{padding:32px 22px;border-radius:24px}}
+    .loading{display:flex;flex-direction:column;align-items:center;gap:18px;text-align:center}
+    .loading h1{margin:0;font-size:26px;font-weight:700;color:var(--ink)}
+    .loading p{margin:0;color:var(--muted);font-size:15px}
+    .spinner{width:70px;height:70px;border-radius:50%;border:6px solid rgba(10,102,194,0.15);border-top-color:var(--brand);animation:spin 1s linear infinite}
+    @keyframes spin{to{transform:rotate(360deg)}}
+    .story{display:none;opacity:0;transition:opacity .6s ease}
+    .story.visible{display:block;opacity:1}
+    h2.story-heading{margin:0;font-size:30px;font-weight:700;color:var(--ink)}
+    p.story-paragraph{margin:18px 0 26px;color:var(--muted);font-size:16px;line-height:1.65}
+    .ats-card{background:rgba(255,255,255,0.96);border-radius:22px;padding:28px;border:1px solid rgba(10,102,194,0.16);box-shadow:0 14px 36px rgba(10,102,194,0.16);display:grid;gap:18px}
+    .ats-score{display:flex;align-items:baseline;gap:12px}
+    .ats-score strong{font-size:42px;font-weight:700;color:var(--brand-strong)}
+    .ats-score span{font-size:15px;color:var(--muted)}
+    .ats-note{font-size:16px;font-weight:600;color:var(--brand-strong)}
+    ul.ats-fixes{margin:0;padding:0 0 0 20px;color:var(--muted);font-size:14px;line-height:1.6}
+    .actions-row{display:flex;flex-wrap:wrap;gap:14px;align-items:center}
+    .btn-primary{background:linear-gradient(135deg,var(--brand),var(--brand-accent));color:#fff;border:none;border-radius:14px;padding:12px 22px;font-weight:600;font-size:15px;cursor:pointer;box-shadow:var(--shadow-sm);transition:transform .2s ease,box-shadow .2s ease}
+    .btn-primary:hover{transform:translateY(-1px);box-shadow:0 18px 34px rgba(10,102,194,0.22)}
+    .btn-text{background:none;border:none;color:var(--brand-strong);font-weight:600;font-size:15px;cursor:pointer;padding:10px 12px 10px 4px}
+    .btn-text:hover{text-decoration:underline}
+    .whisper{margin-top:6px;font-size:13px;color:var(--muted)}
+    .visual-placeholder{margin:32px 0 18px;background:linear-gradient(135deg,rgba(228,239,255,0.9),rgba(204,227,255,0.68));border-radius:20px;padding:26px;border:1px dashed rgba(13,110,253,0.28);color:var(--brand-strong);font-size:15px;line-height:1.6;box-shadow:inset 0 0 0 1px rgba(13,110,253,0.12)}
+    .soft-divider{height:56px;display:grid;place-items:center}
+    .soft-divider::before{content:"";width:180px;height:1px;background:linear-gradient(90deg,rgba(13,110,253,0),rgba(13,110,253,0.45),rgba(13,110,253,0));opacity:0.8}
+    .salary-callout{background:rgba(255,255,255,0.95);border-radius:22px;padding:26px;border:1px solid rgba(10,102,194,0.16);box-shadow:0 16px 40px rgba(10,102,194,0.14);display:grid;gap:14px}
+    .salary-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px}
+    .salary-item{background:rgba(228,239,255,0.6);border-radius:16px;padding:18px;border:1px solid rgba(13,110,253,0.18)}
+    .salary-item strong{display:block;font-size:16px;margin-bottom:6px;color:var(--brand-strong)}
+    .closing-line{margin:32px 0 38px;font-size:18px;font-weight:600;color:var(--ink)}
+    .final-cta{display:flex;justify-content:center}
+    .hidden-input{position:absolute;opacity:0;pointer-events:none;width:0;height:0}
+    @media(max-width:520px){.actions-row{flex-direction:column;align-items:stretch}.btn-primary,.btn-text{text-align:center;width:100%}}
   </style>
 </head>
 <body>
@@ -337,8 +125,31 @@
     </article>
   </main>
 
+  <script src="scripts/theme.js"></script>
   <script>
     const LOADING_DELAY_MS = 1400;
+
+    const notify = (message, options) => {
+      if (window.JobSprintUI && typeof window.JobSprintUI.showToast === 'function') {
+        return window.JobSprintUI.showToast(message, options || {});
+      }
+      return null;
+    };
+
+    const notifyLoading = (message, options) => {
+      if (window.JobSprintUI && typeof window.JobSprintUI.showLoadingToast === 'function') {
+        return window.JobSprintUI.showLoadingToast(message, options || {});
+      }
+      return null;
+    };
+
+    const redirectWithToast = (url, message) => {
+      const toast = notifyLoading(message || 'Redirecting…');
+      setTimeout(() => {
+        toast?.update?.('Almost there…');
+        window.location.href = url;
+      }, 180);
+    };
 
     const readStoredProfile = () => {
       try {
@@ -548,6 +359,7 @@
         if (uploadStatus) {
           uploadStatus.textContent = `Got it — we’ll scan ${file.name} next.`;
         }
+        notify(`Got it — we'll scan ${file.name} next.`, { variant: 'info' });
       });
 
       const continueBtn = document.getElementById("continueBtn");
@@ -559,7 +371,7 @@
         }
         const token = tokenParam || getStoredToken();
         const destination = token ? `/workspace.html?u=${encodeURIComponent(token)}` : "/workspace.html";
-        window.location.href = destination;
+        redirectWithToast(destination, 'Opening your workspace…');
       });
     });
   </script>
