--- a/workspace.html
+++ b/workspace.html
@@ -52,14 +52,27 @@
   .lane-desc{margin:6px 0 0;font-size:12px;color:#9f9f9f;line-height:1.4}
   .count{font-size:12px;color:#2f4f86;background:#edf4ff;border:1px solid #c8d9f4;border-radius:999px;padding:2px 8px}
   .cards{flex:1;padding:10px;display:grid;gap:10px}
-  .card{background:#fff;border:1px solid #c8d9f4;border-radius:12px;padding:12px;box-shadow:var(--shadow);cursor:grab;display:flex;flex-direction:column;gap:8px}
-  .card strong{font-weight:600}
-  .card small{color:var(--muted)}
-  .card-header{font-size:14px;line-height:1.4}
-  .card-role{color:#3b5a85;font-size:13px}
+  .card{
+    position:relative;background:#fff7c2;border:1px solid rgba(225,190,0,.4);border-radius:8px;padding:14px;
+    box-shadow:0 18px 22px -18px rgba(137,111,0,.8),0 10px 20px rgba(247,223,124,.45);
+    cursor:grab;display:flex;flex-direction:column;gap:8px;
+    transform:rotate(-0.8deg) skew(-0.4deg);transition:transform .2s ease;
+  }
+  .card:nth-child(2n){transform:rotate(.9deg) skew(.3deg)}
+  .card:nth-child(3n){transform:rotate(-1.2deg) skew(.2deg)}
+  .card:hover{transform:rotate(0deg) skew(0deg) translateY(-2px)}
+  .card::before{
+    content:"";position:absolute;top:-10px;left:12px;width:48px;height:22px;background:linear-gradient(135deg,#f3e289,#fdf5c4);
+    box-shadow:0 4px 6px rgba(0,0,0,.1);border-radius:4px 4px 2px 2px;
+    transform:rotate(-2deg);opacity:.8;pointer-events:none;
+  }
+  .card strong{font-weight:600;color:#3a2d00}
+  .card small{color:#6a5a1f}
+  .card-header{font-size:14px;line-height:1.4;color:#2d2100}
+  .card-role{color:#4a3600;font-size:13px;font-weight:600}
   .card-badges{display:flex;flex-wrap:wrap;gap:6px}
-  .card-badge{background:#edf4ff;border:1px solid #c8d9f4;border-radius:999px;padding:2px 8px;font-size:11px;color:#2d4c8a;white-space:nowrap}
-  .card-badge.more{background:#e6f0ff;color:#0f3e7c;font-weight:600}
+  .card-badge{background:#ffeaa0;border:1px solid rgba(180,145,0,.3);border-radius:999px;padding:2px 8px;font-size:11px;color:#2c1f00;white-space:nowrap}
+  .card-badge.more{background:#ffd866;color:#2d2100;font-weight:700}
   .empty{flex:1;display:grid;place-items:center;color:#385b8a;font-size:13px;padding:18px}
 
   /* Modal */
