--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     .wrap{max-width:1120px;margin:0 auto;padding:20px}
 
     /* NAV */
-    .nav{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap}
-    .logo{display:flex;align-items:center;gap:10px;font-weight:800}
-    .logo img{height:150px;width:auto}
+    .nav{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap;padding:12px 0}
+    .logo{display:flex;align-items:center;gap:10px;font-weight:800;text-decoration:none}
+    .logo img{height:110px;width:auto}
     .btn{display:inline-block;padding:12px 16px;border-radius:12px;font-weight:700;text-decoration:none;white-space:nowrap}
     .btn.primary{background:linear-gradient(135deg,var(--brand),var(--brand2));color:#fff}
     .btn.secondary{border:1px solid var(--brand);color:var(--brand)}
@@ -108,7 +108,7 @@
   <div class="wrap">
     <!-- NAV -->
     <nav class="nav">
-      <div class="logo"><img src="logo.png" alt="JobSprint logo"></div>
+      <a class="logo" href="index.html"><img src="logo.png" alt="JobSprint logo"></a>
       <div class="cta">
         <a class="btn secondary" href="signup.html?mode=login">Log In</a>
         <a class="btn primary" href="#pricing">Sign Up</a>
