Restore spacing after removing off-track section

--- a/sprint-readiness.html
+++ b/sprint-readiness.html
@@ -28,6 +28,7 @@
     h2.story-heading{margin:0;font-size:30px;font-weight:700;color:var(--ink)}
     p.story-paragraph{margin:18px 0 26px;color:var(--muted);font-size:16px;line-height:1.65}
     .ats-card{background:rgba(255,255,255,0.96);border-radius:22px;padding:28px;border:1px solid rgba(10,102,194,0.16);box-shadow:0 14px 36px rgba(10,102,194,0.16);display:grid;gap:18px}
+    #act3{margin-top:48px}
     .ats-score{display:flex;align-items:baseline;gap:12px}
     .ats-score strong{font-size:42px;font-weight:700;color:var(--brand-strong)}
     .ats-score span{font-size:15px;color:var(--muted)}
@@ -85,15 +86,6 @@
         </div>
 
         <input type="file" class="hidden-input" id="resumeInput" accept=".pdf,.doc,.docx" />
-
-        <section id="act2" style="margin-top: 56px;">
-          <h2 class="story-heading">Where most job hunts go off-track…</h2>
-          <p class="story-paragraph">Most professionals start with enthusiasm but lose rhythm after a few weeks. That’s where JobSprint steps in — a proven CRM-like system for your career. It helps you stay consistent, track every application, and see real progress, one sprint at a time.</p>
-          <div class="visual-placeholder">Imagine a calm kanban board steadily filling with wins. Your opportunities glide from “Research” to “Offer,” with gentle nudges keeping you in rhythm. That’s the workspace waiting for you.</div>
-          <p class="story-paragraph">We’ll help you treat your job search like a project — structured, measurable, and winnable.</p>
-        </section>
-
-        <div class="soft-divider"></div>
 
         <section id="act3">
           <p class="story-paragraph" style="margin-top:0;">Before we continue, one last thing… let’s talk about your next milestone.</p>
